--- a/src/view/login.ejs
+++ b/src/view/login.ejs
@@ -7,7 +7,26 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<title><%= htmlWebpackPlugin.options.title%></title>
 	</head>
-	<body>
-		<div id="container"></div>
+	<body ontouchstart="">
+		<div class="weui-toptips weui-toptips_warn js_tooltips" style="display: none;">错误提示</div>
+		<div id="container" class="container">
+			<div class="weui-cells weui-cells_form">
+            <div class="weui-cell">
+                <div class="weui-cell__hd"><label class="weui-label">用户名</label></div>
+                <div class="weui-cell__bd">
+                    <input class="weui-input" type="number" pattern="[0-9]*" placeholder="请输入注册邮箱或手机号">
+                </div>
+            </div>
+            <div class="weui-cell">
+                <div class="weui-cell__hd"><label class="weui-label">密码</label></div>
+                <div class="weui-cell__bd">
+                    <input class="weui-input" type="number" placeholder="请输入密码">
+                </div>
+            </div>
+            <div class="weui-cell">
+            	<button class="weui-btn weui-btn_primary">登录</button>
+            </div>
+        </div>
+		</div>
 	</body>
 </html>
